fixed the baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: MacBen's Blog
 email: pocketkids@gmail.com
 description: "Just for fun."
-baseurl: "pocketkids.github.io"
+baseurl: ""
 url: "http://pocketkids.github.io"
 
 # Build settings
