--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
-title: MacBen's Blog
+title: MacBen
+username: pocketkids
 email: pocketkids@gmail.com
 description: "Just for fun."
 baseurl: ""
